Task_1/IGW.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.dev.id

  tags = {
    Name = "Dev-IGW-SG"
    Env  = "Dev"
  }
}
