Task_1/Private route.tf
resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.dev.id

  tags = {
    Name = "Dev-Private-RT-SG"
  }
}

resource "aws_route_table_association" "private_assoc" {
  subnet_id      = aws_subnet.private_subnet.id
  route_table_id = aws_route_table.private_rt.id
}
